apps/base/gatus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gatus
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
