apps/base/gatus/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gatus
  namespace: gatus
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`status.rmtt.tech`)
      kind: Rule
      services:
        - name: gatus
          port: 80
  tls:
    certResolver: cfresolver
